Update about html to last changes.

--- a/v1/templates/about.html
+++ b/v1/templates/about.html
@@ -18,57 +18,71 @@
 </head>
 
 <body>
-    <section id="about_bar">
+    <section id="about_top">
         <nav class="navbar navbar-light navbar-expand-md bg-white">
-            <div class="container-fluid"><a class="navbar-brand" href="/home"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navcol-1">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="#" style="color: rgb(0,0,0);"></a></li>
-                    </ul>
-                </div><a class="btn btn-dark" role="button" href="/home">Home</a>
+            <div class="container-fluid"><a class="navbar-brand" href="/home"></a>
+                <div class="collapse navbar-collapse" id="navcol-1"></div><a class="btn btn-dark" role="button" href="/home">Home</a>
             </div>
         </nav>
-        <div class="row">
-            <div class="col">
-                <h1>What is EscenApp?</h1>
-                <p class="lead text-center" id="description" style="font-family: Montserrat, sans-serif;text-align: center;">EscenApp is a brand new event platform that allows for local artists to create an artist-based database for events. Often times only big name events are promoted and local talent is left to fend for themselves. Having such a large artistic community from musicians and artists, to painters and actors, we felt&nbsp; that the gap is never really bridged. Artists often depend on other social media apps to reach the same goal, and the apps aren't particularly for them. Although there are a wide variety of music apps, the other artistic areas sometimes don't receive the same amount of attention.</p>
-                <p class="lead text-center" id="description" style="font-family: Montserrat, sans-serif;">That is where EscenApp comes in. EscenApp's main goal is to centralize and help artists do one thing, share their events. One place, one mission. No more jumping through apps or endless scrolling hoping to come across something worthwhile. Whether you are from the area or not, you'll be able to access this artist-created database and find an event to your tastes. Be it a concert or an art expo, near or far, you'll be able to find it quickly and be on your way.&nbsp; We've hope that artists will use our app to their advantage and that users find it easy to find events and keep up with their preferred artists.</p>
+        <div class="container text-center">
+            <div class="row">
+                <div class="col">
+                    <h1>What is EscenApp?</h1>
+                    <p class="lead text-center" id="description">EscenApp is a brand new event platform that allows for local artists to create an artist-based database for events. Often times only big name events are promoted and local talent is left to fend for themselves. Having such a large artistic community from musicians and artists, to painters and actors, we felt&nbsp; that the gap is never really bridged. Artists often depend on other social media apps to reach the same goal, and the apps aren't particularly for them. Although there are a wide variety of music apps, the other artistic areas sometimes don't receive the same amount of attention.</p>
+                    <p class="lead text-center" id="description">That is where EscenApp comes in. EscenApp's main goal is to centralize and help artists do one thing, share their events. One place, one mission. No more jumping through apps or endless scrolling hoping to come across something worthwhile. Whether you are from the area or not, you'll be able to access this artist-created database and find an event to your tastes. Be it a concert or an art expo, near or far, you'll be able to find it quickly and be on your way.&nbsp; We've hope that artists will use our app to their advantage and that users find it easy to find events and keep up with their preferred artists.</p>
+                    <div><a href="https://github.com/KevinTMO/Escenapp"><img class="rounded-circle github" src="../static/images/github-41.svg"></a></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="about-body">
+        <div>
+            <div class="container-fluid">
+                <div class="row g-0">
+                    <div class="col-6 offset-3">
+                        <h1>Meet the developers</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="container" id="yared">
+                <div>
+                    <div class="row">
+                        <div class="col-6 dev-block">
+                            <h1 class="text-center">Yared Torres</h1>
+                            <p id="description">Local musician of the puertorrican rock, jazz, and punk scene. One of the developers of EscenApp and currently part of Holberton Schools Cohort 15. Currently an advocate for the islands artistic scene while focusing in the field of front-end development. Yared is an alumni of the Conservatory of Music of PR, graduating in 2018 with a B.A in Jazz Performance. He started in Holberton School SJU in January of 2021 and is expected to complete his foundations course in March of 2022.<br></p>
+                            <div><a href="https://github.com/partychu"><img class="rounded-circle github" src="../static/images/github-41.svg"></a></div>
+                        </div>
+                        <div class="col-6"><img class="img-fluid" id="about-img" src="../static/images/devs/DSC05686-Edit-2.jpg"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
     <section>
-        <div>
-            <div class="row g-0">
-                <div class="col-6 offset-3" style="border-style: solid;border-color: rgb(44,44,41);">
-                    <h1 id="about_title">Meet the developers</h1>
+        <div class="container" id="kevin">
+            <div>
+                <div class="row">
+                    <div class="col-6 dev-block">
+                        <h1 class="text-center">Kevin Ramos</h1>
+                        <p id="description">Biography</p>
+                        <div><a href="https://github.com/KevinTMO"><img class="rounded-circle github" src="../static/images/github-41.svg"></a></div>
+                    </div>
+                    <div class="col-6"><img class="img-fluid" id="about-img" src="../static/images/devs/70630575.jpg"></div>
                 </div>
-            </div>
-            <div class="row g-0">
-                <div class="col-6" id="about_info">
-                    <h1 class="text-center">Yared Torres</h1>
-                    <p id="description">Local musician of the puertorrican rock, jazz, and punk scene. One of the developers of EscenApp and currently part of Holberton Schools Cohort 15. Currently an advocate for the islands artistic scene while focusing&nbsp; in the field of front-end development.&nbsp;</p>
-                </div>
-                <div class="col-6"><img class="img-fluid" src="../static/images/devs/DSC05686-Edit-2.jpg" width="100%" height="100%"></div>
             </div>
         </div>
     </section>
-    <section id="page_2">
-        <div>
-            <div class="row g-0">
-                <div class="col-6" id="about_info" style="border-style: solid;">
-                    <h1 class="text-center">Kevin Ramos</h1>
-                    <p id="description">
-		      Former entrepreneur, former paintball practitioner, former graphic designer, currently EscenApp developer and student at Holberton Puerto Rico cohort 15. When the pandemic began, my goal was to restructure myself and adapt to the current reality. I want to eventually help, while I continue to develop as a programmer, the small merchant sector to give them the boost they need to be competitive.
-		    </p>
+    <section>
+        <div class="container" id="sergio">
+            <div>
+                <div class="row">
+                    <div class="col-6 dev-block">
+                        <h1 class="text-center">Sergio Vera</h1>
+                        <p id="description">I'm a Holberton School Puerto Rico Student aspiring full stack developer and freelance Musician. Sergio is an alumni of the Interamerican University Metro Campus, graduating in May 2014 completing his Bachelor of Arts in Music.  He started in Holberton School SJU in August of 2020 and is expected to complete his foundations course in March of 2022.</p>
+                        <div><a href="https://github.com/funkified"><img class="rounded-circle github" src="../static/images/github-41.svg"></a></div>
+                    </div>
+                    <div class="col-6"><img class="img-fluid" id="about-img" src="../static/images/devs/30163478.jpg"></div>
                 </div>
-                <div class="col-6"><img class="img-fluid" src="../static/images/devs/70630575.jpg" width="100%" height="100%"></div>
-            </div>
-            <div class="row g-0">
-                <div class="col-6" id="about_info" style="border-style: solid;">
-                    <h1 class="text-center">Sergio Vera</h1>
-                    <p id="description">Biography</p>
-                </div>
-                <div class="col-6"><img class="img-fluid" src="../static/images/devs/30163478.jpg" width="100%" height="100%"></div>
             </div>
         </div>
     </section>
@@ -82,8 +96,6 @@
         <p class="copyright" style="font-family: Montserrat, sans-serif;">EscenApp © 2022</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- We need it? Below script -->
-    <script src="assets/js/bs-init.js"></script>
 </body>
 
 {% endblock content %}
