Fix type in .css ref

--- a/v1/templates/account.html
+++ b/v1/templates/account.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
-    <link rel="stylesheet" href="../static/style/account.css">
-    <link rel="stylesheet" href="../static/style/home.css">
+    <link rel="stylesheet" href="../static/styles/account.css">
+    <link rel="stylesheet" href="../static/styles/home.css">
 </head>
 
 <body style="background: url('../static/images/the-blowup-26Pcgb1Dals-unsplash.jpg') top / cover no-repeat;">
