--- a/v1/templates/new-event.html
+++ b/v1/templates/new-event.html
@@ -13,11 +13,11 @@
   <link rel="stylesheet" href="../static/styles/new-event.css">
   <link rel="stylesheet" href="../static/styles/home.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-</head> 
+</head>
 
 <body>
   <nav class="navbar navbar-light navbar-expand-md bg-light">
-    <div class="container-fluid"><a class="navbar-brand" href="#"></a><button data-bs-toggle="collapse"
+    <div class="container-fluid"><a class="navbar-brand" href="/home"></a><button data-bs-toggle="collapse"
         class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span
           class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navcol-1"></div><a class="btn btn-dark" role="button"
@@ -29,10 +29,10 @@
       <div class="container">
         <div class="row">
           <div class="col-6 offset-3">
-            <h1 style="border-style: double;">{{ legend }}
-              <legend class="border-bottom"> </legend>
-            </h1>
             <form method="POST" action="">
+              <h3 class="form-head">{{ legend }}
+                <legend> </legend>
+              </h3>
               {{ form.hidden_tag() }}
               <fieldset class="form-group">
                 <!-- BEGINNING OF FEEDBACK ERROR MESSAGE BLOCK -->
