--- a/v1/static/styles/events.css
+++ b/v1/static/styles/events.css
@@ -1,32 +1,43 @@
-.event-info {
-  width: 50%;
-  height: 100vh;
+.btn {
+  margin-left: 5px;
+}
+
+.event-col {
+  background-color: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-basis: 50%;
+  border: 3px #ffffff double;
   margin-top: 50px;
-  border-style: ridge;
   font-family: Montserrat, sans-serif;
   text-align: center;
   font-size: 20px;
-  background: linear-gradient(black 0%, rgb(70,70,70) 107%, white, rgb(89,89,89) 177%);
+  height: auto;
 }
 
-.event.name {
+.event-details {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+#event-name {
   margin-top: 20px;
+  border-top-style: solid;
   border-bottom-style: solid;
   border-radius: 10px;
-  padding-top: 0px;
+  padding-top: 10px;
   font-family: Montserrat, sans-serif;
-  padding-bottom: 30px;
+  padding-bottom: 10px;
   font-weight: bold;
   margin-bottom: 20px;
 }
 
-.event-details {
-}
-
-.fa.fa-star.event-icon {
-}
-
 #event-icons {
-  padding-left: 20px;
+  padding-left: 10px;
 }
 
+.modal-title {
+  color: black;
+}
