--- a/v1/templates/home.html
+++ b/v1/templates/home.html
@@ -20,9 +20,9 @@
                 <div class="container-fluid"><a class="navbar-brand" href="/home"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="navbar-nav mx-auto">
-                            <li class="nav-item"><a class="nav-link active text-start" href="#" style="color: rgb(0,0,0);font-size: 20px;text-align: center;"><strong>Artists</strong></a></li>
-                            <li class="nav-item text-start"><a class="nav-link text-start" href="#" style="color: rgb(0,0,0);font-size: 20px;text-align: center;"><strong>Users</strong></a></li>
-                            <li class="nav-item text-start"><a class="nav-link text-start" href="/about" style="color: rgb(0,0,0);font-size: 20px;text-align: center;"><strong>About</strong></a></li>
+                            <li class="nav-item"><a class="nav-link active text-start" href="#artist" style="color: rgb(0,0,0);font-size: 20px;text-align: center;"><strong>Artists</strong></a></li>
+                            <li class="nav-item text-start"><a class="nav-link text-start" href="#user" style="color: rgb(0,0,0);font-size: 20px;text-align: center;"><strong>Users</strong></a></li>
+                            <li class="nav-item text-start"><a class="nav-link text-start" href="#credits" style="color: rgb(0,0,0);font-size: 20px;text-align: center;"><strong>About</strong></a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto">
 			  {% if current_user.is_authenticated %}
