--- a/v1/templates/new-event.html
+++ b/v1/templates/new-event.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
-  <link rel="stylesheet" href="../static/styles/new-event.css">
-  <link rel="stylesheet" href="../static/styles/home.css">
+  <link rel="stylesheet" href="/static/styles/new-event.css">
+  <link rel="stylesheet" href="/static/styles/home.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 
