--- a/v1/templates/home.html
+++ b/v1/templates/home.html
@@ -2,6 +2,7 @@
 {% block content %}
 
 <head>
+    <!-- Bootstrap CDN (Content Delivery Network) Imports Bootstrap CSS and JS  --> 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700i&amp;display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -16,6 +17,7 @@
 <body>
     <section class="d-flex flex-column justify-content-between" id="home">
         <div id="home_top">
+	<!-- Bootstrap NavBar Block --> 
             <nav class="navbar navbar-light navbar-expand-md bg-light" style="border-bottom-style: solid;border-bottom-color: rgb(0,0,0);">
                 <div class="container-fluid"><a class="navbar-brand" href="/home"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navcol-1">
@@ -24,6 +26,7 @@
                             <li class="nav-item text-start"><a class="nav-link text-start" href="#user" style="color: rgb(0,0,0);font-size: 20px;text-align: center;"><strong>Users</strong></a></li>
                             <li class="nav-item text-start"><a class="nav-link text-start" href="#credits" style="color: rgb(0,0,0);font-size: 20px;text-align: center;"><strong>About</strong></a></li>
                         </ul>
+			<!-- Jinja verifies authentication and displays the appropiate buttons --> 
                         <ul class="navbar-nav ms-auto">
 			  {% if current_user.is_authenticated %}
                           <li class="nav-item"><a class="btn btn-dark text-end" role="button" data-bss-hover-animate="flash" style="margin-right: 2px;margin-bottom: 2px;" href="/logout">Log Out</a></li>
@@ -37,7 +40,9 @@
                 </div>
             </nav>
         </div>
+	<!-- Bootstrap Display Class --> 
          <h2 class="display-1 tagline"><strong>Connecting you to your local scene.</strong></h2>
+	<!-- Bottom block with Bootstrap Icons and button --> 
         <div id="home_bottom">
             <div class="container">
                 <div class="row text-center icons">
@@ -62,6 +67,7 @@
             </div>
         </div>
     </section>
+    <!-- Bootstrap Grid System (row and columns) to divide the container into info and images --> 
     <section class="d-flex flex-column justify-content-center" id="info">
         <div class="container-fluid p-0" id="artist">
             <div>
@@ -108,6 +114,7 @@
             </div>
         </div>
     </section>
+    <!-- Credits section with dev images and link to about page; top of page button --> 
     <section id="credits">
         <div>
             <div class="container text-center credits">
